--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ group = 'net.ujacha'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
+apply plugin: 'war'
+
 repositories {
 	mavenCentral()
 }
