--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,9 @@
 version: 0.2
 
 phases:
+  pre_build:
+    commands:
+      - chmod +x gradlew
   build:
     commands:
       - echo Build started on `date`
