--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,17 @@
+group = 'net.ujacha'
+version = '0.0.1-SNAPSHOT'
+
+apply plugin: 'java'
+apply plugin: 'war'
+
+sourceCompatibility = 1.8
+
+
+repositories {
+	mavenCentral()
+}
+
+
 buildscript {
 	ext {
 		springBootVersion = '1.5.7.RELEASE'
@@ -8,24 +22,18 @@ buildscript {
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath 'org.springframework:springloaded:1.2.6.RELEASE'
+		classpath "io.spring.gradle:dependency-management-plugin:1.0.3.RELEASE"
 	}
 }
 
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: "io.spring.dependency-management"
 
-group = 'net.ujacha'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
-
-apply plugin: 'war'
-
-repositories {
-	mavenCentral()
+dependencyManagement {
+	imports {
+		mavenBom 'com.amazonaws:aws-java-sdk-bom:1.11.228'
+	}
 }
-
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -37,6 +45,10 @@ dependencies {
 	
 	compile('org.apache.poi:poi-ooxml:3.17')
 	compile('org.apache.commons:commons-lang3:3.6')
-	
-	
+
+	compile 'com.amazonaws:aws-java-sdk-dynamodb'
+
 }
+
+apply plugin: 'idea'
+apply plugin: 'eclipse'
