--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ version = '0.0.1-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'war'
+apply plugin: 'idea'
+apply plugin: 'eclipse'
 
 sourceCompatibility = 1.8
 
@@ -48,7 +50,7 @@ dependencies {
 
 	compile 'com.amazonaws:aws-java-sdk-dynamodb'
 
+	compile ('org.projectlombok:lombok')
+
 }
 
-apply plugin: 'idea'
-apply plugin: 'eclipse'
