--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,18 @@
 group = 'net.ujacha'
 version = '0.0.1-SNAPSHOT'
 
+repositories {
+	mavenCentral()
+}
+
 apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+apply plugin: "io.spring.dependency-management"
 
 sourceCompatibility = 1.8
-
-
-repositories {
-	mavenCentral()
-}
 
 
 buildscript {
@@ -28,8 +29,6 @@ buildscript {
 	}
 }
 
-apply plugin: 'org.springframework.boot'
-apply plugin: "io.spring.dependency-management"
 
 dependencyManagement {
 	imports {
@@ -50,7 +49,8 @@ dependencies {
 
 	compile 'com.amazonaws:aws-java-sdk-dynamodb'
 
-	compile ('org.projectlombok:lombok')
+	compileOnly 'org.projectlombok:lombok:1.18.4'
+	annotationProcessor 'org.projectlombok:lombok:1.18.4'
 
 }
 
