--- a/build.gradle
+++ b/build.gradle
@@ -52,5 +52,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.4'
 	annotationProcessor 'org.projectlombok:lombok:1.18.4'
 
+	compile 'org.jsoup:jsoup:1.11.3'
+
 }
 
